crates/sui-prover/tests/snapshots/spec-compilation.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with model building errors
error: unbound unscoped name
   ┌─ tests/inputs/spec-compilation.fail.move:10:3
   │
10 │   and_this_function_does_not_exist();
   │   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Unbound function 'and_this_function_does_not_exist' in current scope
